apps/homepage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  labels:
    cloudlab.kerbaras.com/gateway-access: "true"
