apps/homepage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  parentRefs:
    - name: edge
      namespace: edge
      sectionName: https
  hostnames:
    - home.cloudlab.kerbaras.com
  rules:
    - backendRefs:
        - name: homepage
          port: 3000
